--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/material": "^5.1.0",
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
+    "intro.js": "^4.3.0",
+    "intro.js-react": "^0.5.0",
     "proptypes": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
